# oneDAL

./: .bazelrc  .buildinfo  .editorconfig-checker.json  CONTRIBUTING.md  INSTALL.md  MODULE.bazel  MODULE.bazel.tmp  README.md  WORKSPACE  deprecation.html  makefile  makefile.lst  makefile.ver  third-party-programs.txt
.ci/env/: apt.sh  editorconfig-checker.sh  openblas.sh  tbb.bat  tbb.sh
.ci/pipeline/: ci.yml  docs.yml
.ci/scripts/: abi_check.sh  build.bat  build.sh  clang-format.sh  collect_opencl_rt.ps1  test.sh
.doctrees/: 404.doctree  deprecation.doctree  environment.pickle  index.doctree  installation.doctree  oneapi-interfaces.doctree
.doctrees/api/algorithms/: index.doctree
.doctrees/api/data-management/: backend-primitives.doctree  graphs.doctree
.doctrees/api/spmd/: communicator.doctree  index.doctree  overview.doctree
.doctrees/contribution/: coding_guide.doctree  threading.doctree
.doctrees/daal/: training-prediction.doctree
.doctrees/daal/data-management/: data-dictionaries.doctree  data-serialization-and-deserialization.doctree  generic-interfaces.doctree
.doctrees/daal/services/: extracting-version-information.doctree  handling-errors.doctree  managing-computational-environment.doctree  managing-memory.doctree
.doctrees/daal/usage/: algorithms.doctree  (+1 more)
.doctrees/examples/: cpp.doctree  dpc.doctree
.doctrees/onedal/: gpu_support.doctree
.github/: .abignore  .licenserc.yaml  CODEOWNERS  renovate.json
.github/workflows/: ci-aarch64.yml  ci.yml  docker-validation-ci.yml  docs-release.yml  nightly-build.yml  nightly-test.yml  openssf-scorecard.yml  skywalking-eyes.yml  slack-pr-notification.yml
api/data-management/: array.html  data-sources.html  graph-service.html  index.html  tables.html
cmake/templates/: oneDALConfig.cmake.in
cpp/daal/: BUILD
cpp/oneapi/: dal.hpp
daal/data-management/: data-dictionaries.html  data-management.html  data-model.html  data-sources.html  essential-interfaces.html  numeric-tables-types.html
daal/services/: callback-for-host-application.html  extracting-version-information.html  handling-errors.html  services.html
daal/usage/: algorithms.html  computation-modes.html  index.html
deploy/local/: dal  vars_lnx.sh  vars_mac.sh  vars_win.bat
deploy/nuget/: inteldal.nuspec.tpl
deploy/pkg-config/: pkg-config.tpl
dev/bazel/: daal.bzl  dal.bzl
dev/docker/: onedal-dev.Dockerfile
dev/make/: common.mk  deps.mkl.mk  deps.ref.mk  identify_os.sh
docs/: Makefile  requirements.txt
docs/dalapi/: directives.py
docs/doxygen/: doxygen_conf_cpp.txt  doxygen_conf_cpp_examples.txt  doxygen_conf_cpp_web.txt
docs/source/: conf.py  examples.rst  index-toc.rst  index.rst  installation.rst  system-requirements.rst
examples/: cpp.html
examples/cmake/: setup_examples.cmake
examples/cpp/: basic_statistics_dense_batch.html  column_accessor_homogen.html  cor_dense_batch.html  cov_dense_batch.html  cov_dense_biased_online.html  csr_accessor.html  csr_table.html  df_cls_dense_batch.html  directed_graph.html  homogen_table.html  jaccard_batch_app.html  knn_search_brute_force_dense_batch.html  louvain_batch.html  pca_cov_dense_batch.html  pca_cov_dense_online.html  pca_svd_dense_batch.html  pca_svd_dense_online.html  rbf_kernel_dense_batch.html  shortest_paths_batch.html  subgraph_isomorphism_batch.html  svm_multi_class_thunder_csr_batch.html  svm_multi_class_thunder_dense_batch.html  svm_nu_cls_thunder_csr_batch.html  svm_nu_reg_thunder_dense_batch.html  svm_reg_thunder_csr_batch.html  svm_two_class_thunder_csr_batch.html  svm_two_class_thunder_dense_batch.html  triangle_counting_batch.html
examples/dpc/: basic_statistics_dense_online.html  column_accessor_homogen.html  cov_dense_biased_batch.html  dbscan_brute_force_batch.html  df_cls_hist_batch.html  df_cls_hist_batch_random.html  df_cls_traverse_model.html  df_reg_hist_batch.html  heterogen_table.html  homogen_table.html  kmeans_init_dense.html  linear_regression_dense_online.html  pca_cov_dense_batch.html  pca_precomputed_cor_dense_batch.html  pca_svd_dense_batch.html  read_batch.html
includes/clustering/: dbscan-introduction.html  dbscan-usage-examples.html  kmeans-init-examples.html  kmeans-init-introduction.html  kmeans-init-usage-examples.html  kmeans-introduction.html  kmeans-usage-examples.html
includes/covariance/: covariance-introduction.html
includes/cpu-features/: abc-classification-train-method1-fpt-cpu.html  abc-classification-train-method1-impl.html
includes/data-management/: column-accessor-usage-example.html  csv-data-source-usage-example.html  row-accessor-usage-example.html
includes/decomposition/: pca-introduction.html
includes/ensembles/: df-introduction.html
includes/graph/: connected-components-examples.html  connected-components-introduction.html  subgraph-isomorphism-introduction.html
includes/kernel-functions/: linear-kernel-examples.html  linear-kernel-introduction.html  polynomial-kernel-examples.html  rbf-kernel-examples.html  rbf-kernel-introduction.html
includes/logistic-regression/: logistic-regression-examples.html  logistic-regression-introduction.html
includes/nearest-neighbors/: knn-examples.html  knn-usage-examples.html
includes/optimizers/: newton-cg-introduction.html
includes/pairwise-distances/: minkowski-distance-introduction.html
includes/statistics/: basic-statistics-examples.html  basic-statistics-usage-examples.html
includes/svm/: svm-examples.html  svm-introduction.html
includes/threading/: dot-parallel-init-tls.html  dot-parallel-reduction.html  dot-parallel.html  dot-sequential.html  nested-parallel-ls.html  nested-parallel.html  sum-parallel-by-blocks.html
onedal/: glossary.html  gpu_support.html  introduction.html  notations.html
onedal/algorithms/: index.html
onedal/build_app/: build-application.html
onedal/data-management/: array.html  backend-primitives.html  data-sources.html
onedal/spmd/: index.html
samples/cmake/: setup_samples.cmake
(+2649 files in other folders)
